--- a/style.css
+++ b/style.css
@@ -24,12 +24,61 @@ p {
     margin: 20px;
 }
 
-.nav-bar {
+.header {
+    background-color: #f4c27a;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.top-bar {
+    width: fit-content;
+    height: fit-content;
+    box-sizing: border-box;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 20px;
 }
+
+.logo {
+    width: 100%;
+    padding: 15px;
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;
+}
+
+.logo-full {
+    width: 45%;
+    height: auto; /* Maintain aspect ratio */
+}
+
+.logo-icon {
+    display: none; /* Hide the icon logo by default */
+    height: auto; /* Example height, adjust as needed */
+    width: 70px;
+}
+
+/* When the screen is 768px or less */
+@media (max-width: 768px) {
+    .logo-full { display: none; } /* Hide the full logo */
+    .logo-icon { display: block; } /* Show the icon logo */
+}
+
+.nav-bar {
+    width: fit-content;
+    height: fit-content;
+    padding: 15px;
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    color: #432a17;
+    font-size: 150%;
+}
+
+
 
 a {
     color: #432a17;
