--- a/style.css
+++ b/style.css
@@ -1,34 +1,178 @@
+html {
+    height: 100%;
+}
+
 body {
     background-color: #ffedd8;
-    margin: 0;
-    padding: 0;
+    width: 100%;
+    height: 100%; /* This will now work as expected */
+    margin: 0; /* Ensure no default body margin */
 }
 
 h1 {
-    color: #432a17;
+    color: #ffffff;
     font-family: "Playfair Display", serif;
     font-optical-sizing: auto;
     font-weight: 700;
     font-style: normal;
     text-align: center;
-    margin-top: 50px;
+    margin-top: 0px; /* Keeps the spacing even when invisible */
+}
+
+.title-left, .title-right {
+    opacity: 0; /* Make the text invisible by default */
+    transition: opacity 0.5s ease-in-out, transform 1s ease; /* Smooth transition for visibility and scaling */
+}
+
+.title-left {
+    position: absolute;
+    left: 15%;
+    top: 60%;
+    transform: translateY(-50%);
+}
+
+.title-right {
+    position: absolute;
+    right: 15%;
+    top: 60%;
+    transform: translateY(-50%);
 }
 
 p {
     color: #432a17;
     font-family: "Playfair", serif;
     font-optical-sizing: auto;
-    font-weight: 700;
+    font-weight: 800;
     font-style: normal;
     line-height: 1.6;
     margin: 20px;
+    font-size: 3cap;
+}
+
+.header {
+    width: 100%;
+    height: fit-content;
+    display: flex;
+    align-items: center;
+    padding: 0 20px;
+    position: fixed;
+    top: 0;
+    z-index: 100;
+}
+
+.logo {
+    width: fit-content;
+    height: fit-content;
+    padding: 15px;
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;
+}
+
+.logo-full {
+    width: 50vw; /* Use viewport width for responsive sizing */
+    height: auto; /* Maintain aspect ratio */
+    padding: 0px;
+    box-sizing: border-box;
+    filter: brightness(0) saturate(100%) invert(14%) sepia(7%) saturate(4899%) hue-rotate(343deg) brightness(96%) contrast(88%); /* Original filter */
+    transition: 1.5s ease;
+}
+
+.logo-link:hover .logo-full{
+    transform: scale(1.5);
+    filter: brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(0%) hue-rotate(186deg) brightness(103%) contrast(101%);
+}
+
+.logo-icon {
+    height: auto; /* Example height, adjust as needed */
+    width: 70px;
+    filter: brightness(0) saturate(100%) invert(14%) sepia(7%) saturate(4899%) hue-rotate(343deg) brightness(96%) contrast(88%);
+}
+
+.logo-icon:hover{
+    transition: 0.5s ease;
+    filter: brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(0%) hue-rotate(186deg) brightness(103%) contrast(101%);
+}
+
+.logo-icon:not(:hover){
+    transition: 0.5s ease;
+}
+
+/* When the screen is 768px or less */
+@media (max-width: 768px) {
+    .logo-icon { display: block; } /* Show the icon logo */
+}
+
+.hamburger-menu {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    width: 70px;
+    height: 25px;
+    margin-left: auto;
+    background: transparent;
+    border: none;
+    cursor: pointer;
+}
+
+.hamburger-menu:hover {
+    transition: 0.5s ease;
+    filter: brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(0%) hue-rotate(186deg) brightness(103%) contrast(101%);
+}
+
+.hamburger-menu:not(:hover) {
+    transition: 1s ease;
+}
+
+.hamburger-menu span {
+    width: 30px;
+    height: 3px;
+    background-color: #432a17;
+    border-radius: 5px;
 }
 
 .nav-bar {
+    position: relative;
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
     align-items: center;
-    padding: 10px 20px;
+    justify-content: center;
+    padding-top: 15px;
+    mix-blend-mode: difference;
+    z-index: 2;
+}
+
+.nav-bar a {
+    color: #ffedd8;
+    font-size: 1.5rem;
+    margin: 15px 0;
+}
+
+.main {
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center; /* Center .logo-and-titles-wrapper horizontally */
+    flex-direction: column; /* Stack children vertically */
+    display: flex;
+}
+
+.scroll-down-text {
+    position: relative;
+    text-align: justify;
+    padding: 6%;
+}
+
+.logo-and-titles-wrapper:hover .title-left,
+.logo-and-titles-wrapper:hover .title-right {
+    transition-delay: 0.5s;
+    opacity: 1; /* Make the text visible on logo hover */
+    transform: translateY(20px); /* Slightly enlarge the text on logo hover */
+}
+
+.logo-link {
+    display: inline-block;
+    line-height: 0; /* Removes any extra space below the image */
 }
 
 a {
@@ -40,4 +184,186 @@ a {
     text-decoration: none;
     margin: 0 10px;
     position: relative;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.menu-container {
+    position: fixed;
+    top: 32%;
+    right: 0;
+    width: 150px;
+    height: 50vh;
+    overflow: hidden;
+    filter: url(#goo);
+    transform: translateX(100%);
+    transition: transform 1s cubic-bezier(0.77, 0, 0.175, 1);
+    z-index: 5;
+    border-radius: 25px 0 0 25px;
+    background-color: #ffedd8;
+    border: 3px solid #432a17;
+    border-right: none;
+}
+
+.menu-container.is-open {
+    transform: translateX(0);
+}
+
+.particle {
+    width: 20px;
+    height: 20px;
+    top: -50%;
+    background-color: #432a17;
+    position: absolute;
+    border-radius: 50%;
+    animation: fall 10s infinite;
+}
+
+@keyframes fall {
+    0% {
+        top: -50%;
+    }
+    75% {
+        opacity: 1;
+        transform: scale(3.5);
+    }
+    100% {
+        top: 100%;
+        transform: scale(0);
+    }
+}
+
+.particle:nth-of-type(2n) {
+    width: 60px;
+    height: 60px;
+    left: 85%;
+    background-color: #f4c27a;
+}
+
+.particle:nth-of-type(3n) {
+    width: 80px;
+    height: 80px;
+    left: 30%;
+}
+
+.particle:nth-of-type(4n) {
+    width: 30px;
+    height: 30px;
+    left: 70%;
+}
+
+.particle:nth-of-type(5n) {
+    width: 50px;
+    height: 50px;
+    left: 45%;
+}
+
+.particle:nth-of-type(6n) {
+    width: 120px;
+    height: 120px;
+    left: 90%;
+}
+
+.particle:nth-of-type(1) {
+    left: 15%;
+    animation-delay: 0.5s;
+}
+
+.particle:nth-of-type(2) {
+    animation-delay: 1s;
+}
+
+.particle:nth-of-type(3) {
+    left: 30%;
+    animation-delay: 1.5s;
+}
+
+.particle:nth-of-type(4) {
+    left: 70%;
+    animation-delay: 2s;
+}
+
+.particle:nth-of-type(5) {
+    left: 45%;
+    animation-delay: 2.5s;
+}
+
+.particle:nth-of-type(6) {
+    left: 90%;
+    animation-delay: 2.7s;
+}
+
+.particle:nth-of-type(7) {
+    left: 10%;
+    animation-delay: 3s;
+}
+
+.particle:nth-of-type(8) {
+    left: 60%;
+    animation-delay: 3.2s;
+}
+
+.particle:nth-of-type(9) {
+    left: 25%;
+    animation-delay: 4s;
+}
+
+.particle:nth-of-type(10) {
+    left: 75%;
+    animation-delay: 4.5s;
+}
+
+.particle:nth-of-type(11) {
+    left: 5%;
+    animation-delay: 5s;
+}
+
+.particle:nth-of-type(12) {
+    left: 95%;
+    animation-delay: 5.5s;
+}
+
+.particle:nth-of-type(13) {
+    left: 50%;
+    animation-delay: 6s;
+}
+
+.particle:nth-of-type(14) {
+    left: 80%;
+    animation-delay: 6.5s;
+}
+
+.particle:nth-of-type(15) {
+    left: 20%;
+    animation-delay: 7s;
+}
+
+.border {
+    position: absolute;
+    width: 100%;
+    height: 10%;
+}
+
+.border:nth-last-of-type(1) {
+    top: 0;
+    left: 0;
+}
+
+.border:nth-last-of-type(2) {
+    bottom: 0;
+    left: 0;
+}
+
+.background-video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1;
 }
